--- a/page_event_echarts.html
+++ b/page_event_echarts.html
@@ -512,7 +512,7 @@
                 var length = $(".data_item").length;
                 $(".data_item").eq(curIndex).addClass("active").siblings().removeClass("active");
                 curIndex = (curIndex + 1) % length;
-                console.log(length, curIndex);
+                // console.log(length, curIndex);
             }, setIntervalTime);
         }
 
